added c3-cc1101 board

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,27 +17,30 @@ workspace_dir = ${sysenv.HOME}/.pioenvs
 # should be only in this section
 src_dir = ./src
 
-default_envs = mhetlive
+default_envs = c3-cc1101
 
 [env:common-esp32]
 
-platform = espressif32
+;platform = espressif32
 board = esp32dev
 board_build.filesystem = spiffs
 framework = arduino
-platform_packages = framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.9
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.06.04/platform-espressif32.zip
 
 lib_deps =
     plapointe6/EspMQTTClient
+    Makuna/NeoPixelBus 
     #bblanchon/ArduinoJson
-    #marvinroger/AsyncMqttClient
-    #https://github.com/me-no-dev/ESPAsyncWebServer
-    #https://github.com/me-no-dev/AsyncTCP
 
+; =========================================
+; Please change METER_YEAR and METER_SERIAL 
+; from your own counter
+; =========================================
 build_flags = 
+    -D CORE_DEBUG_LEVEL=3
     -D FREQUENCY=433.8683f
     -D METER_YEAR=17
-    -D METER_SERIAL=301663
+    -D METER_SERIAL=1234567
     -D SPI_SPEED=1000000
     -D DEBUG_OUT=0
 
@@ -48,7 +51,7 @@ build_flags =
 ;upload_port = 192.168.1.170
 
 monitor_speed = 115200
-monitor_filters = esp32_exception_decoder, time
+monitor_filters = esp32_exception_decoder, time, default
 ;monitor_port = ${env:common-esp32.upload_port}
 
 [env:mhetlive]
@@ -93,6 +96,27 @@ build_flags = ${env:common-esp32.build_flags}
     -D SerialDebug=Serial
     -D GDO0=16 -D GDO2=17
     -D SPI_SS=5 -D SPI_MOSI=23 -D SPI_CSK=18 -D SPI_MISO=19
+
+;upload_speed = 115200
+;upload_port=/dev/tty.usbmodem01
+
+[env:c3-cc1101]
+extends = env:common-esp32
+board = esp32-c3-devkitm-1
+lib_deps = ${env:common-esp32.lib_deps}
+build_flags = ${env:common-esp32.build_flags}
+    -D ESP32C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1 
+    -D SerialDebug=Serial
+    -D GDO0=1 -D GDO2=0
+    -D SPI_SS=8 -D SPI_MOSI=7 -D SPI_CSK=6 -D SPI_MISO=2
+    -D I2C1_SCL=4 -D I2C1_SDA=5 ; I2C Bus 1 pins
+    -D BAT_VOLTAGE=10     ; Analog battery voltage
+    -D NEOPIXEL_DATA=3   ; Neo Pixel Led Pin (on board)
+    -D NEOPIXEL_LEDS=1   ; Neo Pixel Led Number
+    -D MY_RGB_BRIGHTNESS=128 ; Led Color Brightness from 8 to 255 (full)
+    -D BTN1=9            ; On board button
+    -D BTN1_ACTIVE=LOW   ; GPIO Pin state when button 1 pressed
+    -D SLEEP_SEC=120     ; Sleep after x seconds (0 = no sleep mode)
 
 ;upload_speed = 115200
 ;upload_port=/dev/tty.usbmodem01
