--- a/platformio.ini
+++ b/platformio.ini
@@ -34,15 +34,17 @@ lib_deps =
 
 ; =========================================
 ; Please change METER_YEAR and METER_SERIAL 
-; from your own counter
+; from your own counter and ajust WiFi 
+; and MQTT informations
 ; =========================================
 build_flags = 
     -D CORE_DEBUG_LEVEL=3
-    -D FREQUENCY=433.8683f
+;    -D FREQUENCY=433.8683f ; 
+    -D FREQUENCY=0.0f ; 0 to start a frequency scan
     -D METER_YEAR=17
     -D METER_SERIAL=1234567
     -D SPI_SPEED=1000000
-    -D DEBUG_OUT=0
+    -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
 
 ;upload_speed = 512000
 ;upload_port = /dev/cu.usbserial-021J2UJO
