--- a/platformio.ini
+++ b/platformio.ini
@@ -41,8 +41,8 @@ build_flags =
     -D CORE_DEBUG_LEVEL=3
 ;    -D FREQUENCY=433.8683f ; 
     -D FREQUENCY=0.0f ; 0 to start a frequency scan
-    -D METER_YEAR=17
-    -D METER_SERIAL=1234567
+    -D METER_YEAR=22
+    -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
 
@@ -105,17 +105,21 @@ build_flags = ${env:common-esp32.build_flags}
 [env:c3-cc1101]
 extends = env:common-esp32
 board = esp32-c3-devkitm-1
+
 lib_deps = ${env:common-esp32.lib_deps}
+    Makuna/NeoPixelBus 
+
 build_flags = ${env:common-esp32.build_flags}
-    -D ESP32C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1 
+    -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1 -D ESP32C3=1
     -D SerialDebug=Serial
     -D GDO0=1 -D GDO2=0
-    -D SPI_SS=8 -D SPI_MOSI=7 -D SPI_CSK=6 -D SPI_MISO=2
-    -D I2C1_SCL=4 -D I2C1_SDA=5 ; I2C Bus 1 pins
-    -D BAT_VOLTAGE=10     ; Analog battery voltage
+    -D SPI_SS=8 -D SPI_MOSI=7 -D SPI_CSK=6 -D SPI_MISO=2 ; SPI Bus pins
+    -D I2C1_SCL=4 -D I2C1_SDA=5 ; I2C Bus pins
+    -D BAT_VOLTAGE=10    ; Analog battery voltage
+    -D MOD_NEOPIXEL=1    ; Enable NeoPixel
     -D NEOPIXEL_DATA=3   ; Neo Pixel Led Pin (on board)
     -D NEOPIXEL_LEDS=1   ; Neo Pixel Led Number
-    -D MY_RGB_BRIGHTNESS=128 ; Led Color Brightness from 8 to 255 (full)
+    -D MY_RGB_BRIGHTNESS=255 ; Led Color Brightness from 8 to 255 (full)
     -D BTN1=9            ; On board button
     -D BTN1_ACTIVE=LOW   ; GPIO Pin state when button 1 pressed
     -D SLEEP_SEC=120     ; Sleep after x seconds (0 = no sleep mode)
