set options for WiFi et MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -45,6 +45,9 @@ build_flags =
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
+    -D WIFI_SSID=\"CH2I-HOTSPOT\"
+    -D WIFI_PASS=\"Wireless@Ch2i\"
+    -D MQTT_SERVER=\"192.168.1.8\"
 
 ;upload_speed = 512000
 ;upload_port = /dev/cu.usbserial-021J2UJO
