added timezone and topic parameters

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@ platform = https://github.com/tasmota/platform-espressif32/releases/download/202
 lib_deps =
     plapointe6/EspMQTTClient
     Makuna/NeoPixelBus 
-    #bblanchon/ArduinoJson
+    bblanchon/ArduinoJson
 
 ; =========================================
 ; Please change METER_YEAR and METER_SERIAL 
@@ -38,16 +38,19 @@ lib_deps =
 ; and MQTT informations
 ; =========================================
 build_flags = 
-    -D CORE_DEBUG_LEVEL=3
+    -D CORE_DEBUG_LEVEL=1
 ;    -D FREQUENCY=433.8683f ; 
     -D FREQUENCY=0.0f ; 0 to start a frequency scan
     -D METER_YEAR=22
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
+    -D WAKE_HOUR=10 ; wake and measure at 10H00 Local Time
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
-    -D WIFI_SSID=\"CH2I-HOTSPOT\"
-    -D WIFI_PASS=\"Wireless@Ch2i\"
+    -D WIFI_SSID=\"YOUR-SSID\"
+    -D WIFI_PASS=\"YOUR-PASSWORD\"
     -D MQTT_SERVER=\"192.168.1.8\"
+    -D TOPIC_BASE=\"everblu/\"
+    -D TIME_ZONE=TZ_Europe_Paris ; See timezone.h of ./src folder
 
 ;upload_speed = 512000
 ;upload_port = /dev/cu.usbserial-021J2UJO
@@ -128,4 +131,5 @@ build_flags = ${env:common-esp32.build_flags}
     -D SLEEP_SEC=120     ; Sleep after x seconds (0 = no sleep mode)
 
 ;upload_speed = 115200
-;upload_port=/dev/tty.usbmodem01
+;upload_port = /dev/tty.usbmodem13201
+;monitor_port = /dev/tty.usbmodem13201
