adjusted time of wake and default frequency

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,12 +39,12 @@ lib_deps =
 ; =========================================
 build_flags = 
     -D CORE_DEBUG_LEVEL=1
-;    -D FREQUENCY=433.8683f ; 
-    -D FREQUENCY=0.0f ; 0 to start a frequency scan
+    -D FREQUENCY=433.8200f ; 
+    ;-D FREQUENCY=0.0f ; 0 to start a frequency scan
     -D METER_YEAR=22
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
-    -D WAKE_HOUR=10 ; wake and measure at 10H00 Local Time
+    -D WAKE_HOUR=07 ; wake and measure at 08H00 Local Time
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
     -D WIFI_SSID=\"YOUR-SSID\"
     -D WIFI_PASS=\"YOUR-PASSWORD\"
@@ -120,7 +120,8 @@ build_flags = ${env:common-esp32.build_flags}
     -D SerialDebug=Serial
     -D GDO0=1 -D GDO2=0
     -D SPI_SS=8 -D SPI_MOSI=7 -D SPI_CSK=6 -D SPI_MISO=2 ; SPI Bus pins
-    -D I2C1_SCL=4 -D I2C1_SDA=5 ; I2C Bus pins
+    -D I2C_SCL=4 -D I2C_SDA=5 ; I2C Bus pins
+    -D USE_LC709203F=1   ; Battery Voltge monitoring
     -D BAT_VOLTAGE=10    ; Analog battery voltage
     -D MOD_NEOPIXEL=1    ; Enable NeoPixel
     -D NEOPIXEL_DATA=3   ; Neo Pixel Led Pin (on board)
