added FORCE_SCAN and PUBLISH_RAW

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,8 +39,7 @@ lib_deps =
 ; =========================================
 build_flags = 
     -D CORE_DEBUG_LEVEL=1
-    -D FREQUENCY=433.8200f ; 
-    ;-D FREQUENCY=0.0f ; 0 to start a frequency scan
+    ;-D FORCE_SCAN ; // Force a frequency scan on boot
     -D METER_YEAR=22
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
@@ -50,6 +49,7 @@ build_flags =
     -D WIFI_PASS=\"YOUR-PASSWORD\"
     -D MQTT_SERVER=\"192.168.1.8\"
     -D TOPIC_BASE=\"everblu/\"
+    ;-D PUBLISH_RAW  ; Enable to publish also RAW values (keeping JSON)
     -D TIME_ZONE=TZ_Europe_Paris ; See timezone.h of ./src folder
 
 ;upload_speed = 512000
@@ -118,18 +118,17 @@ lib_deps = ${env:common-esp32.lib_deps}
 build_flags = ${env:common-esp32.build_flags}
     -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1 -D ESP32C3=1
     -D SerialDebug=Serial
-    -D GDO0=1 -D GDO2=0
-    -D SPI_SS=8 -D SPI_MOSI=7 -D SPI_CSK=6 -D SPI_MISO=2 ; SPI Bus pins
-    -D I2C_SCL=4 -D I2C_SDA=5 ; I2C Bus pins
-    -D USE_LC709203F=1   ; Battery Voltge monitoring
-    -D BAT_VOLTAGE=10    ; Analog battery voltage
-    -D MOD_NEOPIXEL=1    ; Enable NeoPixel
-    -D NEOPIXEL_DATA=3   ; Neo Pixel Led Pin (on board)
-    -D NEOPIXEL_LEDS=1   ; Neo Pixel Led Number
-    -D MY_RGB_BRIGHTNESS=255 ; Led Color Brightness from 8 to 255 (full)
-    -D BTN1=9            ; On board button
-    -D BTN1_ACTIVE=LOW   ; GPIO Pin state when button 1 pressed
-    -D SLEEP_SEC=120     ; Sleep after x seconds (0 = no sleep mode)
+    -D GDO0=1 -D GDO2=0         ; CC1101 wiring
+    -D SPI_SS=8 -D SPI_MOSI=7   ; SPI 
+    -D SPI_CSK=6 -D SPI_MISO=2  ; SPI 
+    -D I2C_SCL=4 -D I2C_SDA=5   ; I2C Bus pins
+    -D USE_LC709203F=1          ; Battery Voltge monitoring
+    -D BAT_VOLTAGE=10           ; Analog battery voltage
+    -D MOD_NEOPIXEL=1           ; Enable NeoPixel
+    -D NEOPIXEL_DATA=3          ; Neo Pixel Led Pin (on board)
+    -D NEOPIXEL_LEDS=1          ; Neo Pixel Led Number
+    -D MY_RGB_BRIGHTNESS=255    ; Led Color Brightness from 0 to 255 (full)
+    -D BTN1=9                   ; On board button
 
 ;upload_speed = 115200
 ;upload_port = /dev/tty.usbmodem13201
