added MQTT Auth

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,11 +43,14 @@ build_flags =
     -D METER_YEAR=22
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
-    -D WAKE_HOUR=07 ; wake and measure at 08H00 Local Time
+    -D WAKE_HOUR=08 ; wake and measure at this Local Time
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
     -D WIFI_SSID=\"YOUR-SSID\"
     -D WIFI_PASS=\"YOUR-PASSWORD\"
     -D MQTT_SERVER=\"192.168.1.8\"
+    -D MQTT_USER=\"\"
+    -D MQTT_PASS=\"\"
+    -D MQTT_PORT=1883
     -D TOPIC_BASE=\"everblu/\"
     ;-D PUBLISH_RAW  ; Enable to publish also RAW values (keeping JSON)
     -D TIME_ZONE=TZ_Europe_Paris ; See timezone.h of ./src folder
@@ -127,7 +130,7 @@ build_flags = ${env:common-esp32.build_flags}
     -D MOD_NEOPIXEL=1           ; Enable NeoPixel
     -D NEOPIXEL_DATA=3          ; Neo Pixel Led Pin (on board)
     -D NEOPIXEL_LEDS=1          ; Neo Pixel Led Number
-    -D MY_RGB_BRIGHTNESS=128    ; Led Color Brightness from 0 to 255 (full)
+    -D MY_RGB_BRIGHTNESS=92    ; Led Color Brightness from 0 to 255 (full)
     -D BTN1=9                   ; On board button
 
 ;upload_speed = 115200
