added RETRIES, RETRIES_DELAY and WAKE_MIN

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,9 @@ build_flags =
     -D METER_YEAR=22
     -D METER_SERIAL=828979
     -D SPI_SPEED=1000000
-    -D WAKE_HOUR=08 ; wake and measure at this Local Time
+    -D WAKE_HOUR=06 -D WAKE_MIN=15     ; wake and measure at this Local Time
+    -D RETRIES=6        ; number of retries on read fail
+    -D RETRIES_DELAY=15 ; interval between retries (in min)
     -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
     -D WIFI_SSID=\"YOUR-SSID\"
     -D WIFI_PASS=\"YOUR-PASSWORD\"
