add wifi, meter and mqtt details

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ workspace_dir = ${sysenv.HOME}/.pioenvs
 # should be only in this section
 src_dir = ./src
 
-default_envs = c3-cc1101
+default_envs = esp32dev
 
 [env:common-esp32]
 
@@ -39,29 +39,26 @@ lib_deps =
 ; =========================================
 build_flags = 
     -D CORE_DEBUG_LEVEL=1
-    ;-D FORCE_SCAN ; // Force a frequency scan on boot
-    -D METER_YEAR=22
-    -D METER_SERIAL=828979
+     ;-D FORCE_SCAN                         ; // Force a frequency scan on boot
+    -D METER_YEAR=23
+    -D METER_SERIAL=576128
+    -D GDO0=2
+    -D GDO2=4
+    -D SPI_SS=5
+    -D SPI_MOSI=23
+    -D SPI_CSK=18
+    -D SPI_MISO=19
     -D SPI_SPEED=1000000
-    -D WAKE_HOUR=06 -D WAKE_MIN=15     ; wake and measure at this Local Time
-    -D RETRIES=6        ; number of retries on read fail
-    -D RETRIES_DELAY=15 ; interval between retries (in min)
-    -D DEBUG_OUT=0 ; set to 1 to see cc1101 debug
-    -D WIFI_SSID=\"YOUR-SSID\"
-    -D WIFI_PASS=\"YOUR-PASSWORD\"
-    -D MQTT_SERVER=\"192.168.1.8\"
-    -D MQTT_USER=\"\"
-    -D MQTT_PASS=\"\"
+    -D NEOPIXEL_LEDS=1                      ; Neo Pixel Led Number
+    -D MY_RGB_BRIGHTNESS=92                 ; Led Color Brightness from 0 to 255 (full)
+    -D WAKE_HOUR=06 -D WAKE_MIN=15          ; wake and measure at this Local Time
+    -D RETRIES=6                            ; number of retries on read fail
+    -D RETRIES_DELAY=15                     ; interval between retries (in min)
+    -D DEBUG_OUT=0                          ; set to 1 to see cc1101 debug
     -D MQTT_PORT=1883
-    -D TOPIC_BASE=\"everblu/\"
-    ;-D PUBLISH_RAW  ; Enable to publish also RAW values (keeping JSON)
+    -D TOPIC_BASE=\"water_meter/\"
+    ;-D PUBLISH_RAW                         ; Enable to publish also RAW values (keeping JSON)
     -D TIME_ZONE=TZ_Europe_Paris ; See timezone.h of ./src folder
-
-;upload_speed = 512000
-;upload_port = /dev/cu.usbserial-021J2UJO
-;upload_protocol = espota
-;upload_flags = --8266
-;upload_port = 192.168.1.170
 
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, time, default
